removed extra padding and fixed episode toggle

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5148,9 +5148,6 @@ iframe.fb_ltr{
 #launch-videos .opt-in-fields .input{
   max-width:430px;
 }
-#launch-videos .opt-in-fields-main{
-  padding-top:110px;
-}
 #launch-videos .opt-in-fields-main input{
   text-align:center;
 }
