--- a/src/css/pages/launch-squeeze.styl
+++ b/src/css/pages/launch-squeeze.styl
@@ -222,7 +222,6 @@
       align-items: center;
       justify-content: center;
   .opt-in-fields-main
-    padding-top:110px
     @media screen and (max-width:520px)
       display: block;
     input
